<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout01"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D0000000"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="91dp"
        android:background="#FFFFFF"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="91dp"
        android:background="#FFFFFF"
        android:text="@string/password" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="137dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="137dp"
        android:text="@string/signIn" />
</RelativeLayout>