<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout01"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D0000000"
        android:textAlignment="center" />

    <Button
        android:id="@+id/sign-up-button"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_marginStart="101dp"
        android:layout_marginTop="222dp"
        android:layout_marginEnd="102dp"
        android:text="@string/signUp" />

    <EditText
        android:id="@+id/Login"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="93dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="91dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="92dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="-50dp"
        android:text="@string/email"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="107dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="-130dp"
        android:text="@string/intrument"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginBottom="-121dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/sign-in-link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="592dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="-210dp"
        android:gravity="center"
        android:text="@string/haveAnAccount"
        android:textColor="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_above="@+id/Password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginBottom="-80dp"
        android:text="@string/password"
        android:textColor="@color/white" />

    <Spinner
        android:id="@+id/instruments-spinner"
        android:layout_width="230dp"
        android:layout_height="33dp"
        android:layout_below="@+id/email"
        android:layout_marginStart="90dp"
        android:layout_marginTop="46dp"
        android:background="@android:color/white" />

</RelativeLayout>