<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout01"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="400dp"
        android:text="@string/fullName"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="445dp"
        android:text="@string/intrument"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="379dp"
        android:layout_height="76dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/profileButton"
            android:layout_width="73dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_weight="0"
            app:srcCompat="@android:drawable/ic_menu_myplaces" />

        <ImageButton
            android:id="@+id/lessonButton"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_weight="0"
            app:srcCompat="@android:drawable/ic_input_get" />

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="35dp"
            android:layout_weight="0"
            app:srcCompat="@android:drawable/ic_menu_set_as" />
    </LinearLayout>

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="89dp"
        android:layout_marginTop="15dp"
        android:background="@color/white"
        android:padding="3dp" />

    <EditText
        android:id="@+id/avatar-edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="18dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/avatar" />

    <EditText
        android:id="@+id/login-edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="98dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:focusable="false"/>

    <EditText
        android:id="@+id/email-edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="139dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="Name"
        />

    <EditText
        android:id="@+id/full-name-edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="184dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

    <EditText
        android:id="@+id/instrument-edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="227dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:focusable="false"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="315dp"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="355dp"
        android:text="@string/email"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/save-button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="479dp"
        android:text="@string/save" />
</RelativeLayout>